fix: replace Collectors.toList() with toList() (Sonar)